--- a/assets/docs.css
+++ b/assets/docs.css
@@ -1,3 +1,18 @@
+.tsd-panel > .tsd-signatures > .tsd-signature {
+  margin-top: 60px;
+}
+
+.tsd-panel > .tsd-signatures > .tsd-signature:first-of-type {
+  margin-top: 40px;
+}
+
+.tsd-signature {
+  background: var(--code-background) !important;
+  border: none !important;
+  border-radius: 5px !important;
+  padding-left: 10px !important;
+}
+
 .tsd-hierarchy {
   display: none;
 }
